--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -15,3 +15,4 @@
 @import 'components/dashboard.scss';
 @import 'components/toy-app.scss';
 @import 'components/toy-edit.scss';
+@import 'components/popup.scss';
